Docker implemented, readme überarbeited, test cases